<resources>
    <string name="app_name">Waterplace</string>
    <string name="Login">Login</string>
    <string name="Cadastro">Afiliar-se</string>
    <string name="TxtCadastro">Cadastro</string>
    <string name="Cadastrar">Cadastrar</string>
    <string name="Email">Email</string>
    <string name="Senha">Senha</string>
    <string name="ConfSenha">Confirmar Senha</string>
    <string name="Recover">Esqueceu sua senha? -></string>
    <string name="RecoverTxt">Recuperar Senha</string>
    <string name="Enviar">Enviar</string>
    <string name="NomeEstabelecimento">Nome do Estabelecimento</string>
    <string name="Telefone">Telefone</string>
    <string name="DataNasc">Data de Nascimento</string>
    <string name="Endereco">Endereço do estabelecimento</string>
    <string name="Cnpj">Cnpj</string>
    <string name="Rua">Rua</string>
    <string name="Numero">Número</string>
    <string name="Complemento">Complemento</string>
    <string name="CEP">CEP</string>
    <string name="Erro">A informação fornecida no campo é inválida.</string>
    <string name="Erro_util">Email já cadastrado no sistema.</string>
    <string name="Erro_senha">Verifique se as senhas fornecidas são iguais.</string>
    <string name="Erro_end">Endereço não encontrado</string>
    <string name="TxtExplica">Por favor, indique o seu endereço de email. Você receberá um link para criar uma nova senha.</string>
    <string name="TxtConfirm">Um e-mail para redefinir a sua senha foi enviado!</string>
    <string name="ligacoes_habilitadas">Ligações habilitadas</string>
    <string name="ligacoes_desabilitadas">Ligações desabilitadas</string>
    <string name="volume">Volume</string>
    <string name="type">Tipo</string>
    <string name="add_product">Adicionar Produto</string>
    <string name="price">Preço</string>
    <string name="product_name">Nome do Produto</string>
    <string name="description">Descrição</string>
    <string name="placeholder">Placeholder</string>
    <string name="confirmar_altera_es">Confirmar alterações</string>

    <string-array name="dropdown_items">
        <item>Galão</item>
        <item>Copinho</item>
        <item>Garrafa</item>
        <item>Outro</item>
    </string-array>
</resources>