<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activity.Register">


        <ImageButton
            android:id="@+id/back_arrow_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="350dp"
            android:backgroundTint="@color/white"
            android:scaleType="fitStart"
            android:src="@drawable/back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logo_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_arrow_4"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/header_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/TxtCadastro"
            android:textColor="#0188b9"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_5" />

        <EditText
            android:id="@+id/input_nome"
            android:layout_width="293dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_background"
            android:drawablePadding="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColorHint="#69b2c3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_cadastro" />

        <TextView
            android:id="@+id/txt_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="102dp"
            android:text="@string/NomeEstabelecimento"
            android:textColor="#69b2c3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_cadastro" />

        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:text="@string/Erro"
            android:textColor="#FF9494"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/input_email_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/error_util"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="98dp"
            android:text="@string/Erro_util"
            android:textColor="#FF9494"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/input_email_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/input_email_3"
            android:layout_width="293dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_background"
            android:drawablePadding="20dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColorHint="#69b2c3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_nome" />

        <TextView
            android:id="@+id/txt_email_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="234dp"
            android:text="@string/Email"
            android:textColor="#69b2c3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_nome" />

        <TextView
            android:id="@+id/error_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:text="@string/Erro"
            android:textColor="#FF9494"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/input_telefone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/input_telefone"
            android:layout_width="293dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_background"
            android:drawablePadding="20dp"
            android:ems="10"
            android:inputType="phone"
            android:textColorHint="#69b2c3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_email_3" />

        <TextView
            android:id="@+id/txt_telefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="214dp"
            android:text="@string/Telefone"
            android:textColor="#69b2c3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_email_3" />

        <TextView
            android:id="@+id/error_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:text="@string/Erro"
            android:textColor="#FF9494"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/input_cnpj_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/input_cnpj_2"
            android:layout_width="293dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_background"
            android:ems="10"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_telefone" />

        <TextView
            android:id="@+id/txt_cnpj_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="240dp"
            android:text="@string/Cnpj"
            android:textColor="#69b2c3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_telefone" />

        <EditText
            android:id="@+id/input_password_2"
            android:layout_width="293dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_background"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_cnpj_2" />

        <TextView
            android:id="@+id/txt_senha_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="230dp"
            android:text="@string/Senha"
            android:textColor="#69b2c3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_cnpj_2" />

        <TextView
            android:id="@+id/error_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:text="@string/Erro_senha"
            android:textColor="#FF9494"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/input_confirm_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/input_confirm_password"
            android:layout_width="293dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_background"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_password_2" />

        <TextView
            android:id="@+id/txt_confirm_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="166dp"
            android:text="@string/ConfSenha"
            android:textColor="#69b2c3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_password_2" />

        <TextView
            android:id="@+id/header_endereco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="88dp"
            android:text="@string/Endereco"
            android:textColor="#0080ff"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_confirm_password" />

        <ImageView
            android:id="@+id/barra"
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_endereco"
            app:srcCompat="@drawable/barra" />

        <TextView
            android:id="@+id/error_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="136dp"
            android:text="@string/Erro_end"
            android:textColor="#FF9494"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/input_rua"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/input_rua"
            android:layout_width="293dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_background"
            android:drawablePadding="20dp"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:textColorHint="#69b2c3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barra" />

        <TextView
            android:id="@+id/txt_rua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="245dp"
            android:text="@string/Rua"
            android:textColor="#69b2c3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barra" />

        <EditText
            android:id="@+id/input_num"
            android:layout_width="293dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_background"
            android:drawablePadding="20dp"
            android:ems="10"
            android:inputType="number"
            android:textColorHint="#69b2c3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_rua" />

        <TextView
            android:id="@+id/txt_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="218dp"
            android:text="@string/Numero"
            android:textColor="#69b2c3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_rua" />

        <EditText
            android:id="@+id/input_cep"
            android:layout_width="293dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_background"
            android:drawablePadding="20dp"
            android:ems="10"
            android:inputType="number"
            android:textColorHint="#69b2c3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_num" />

        <TextView
            android:id="@+id/txt_cep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="245dp"
            android:text="@string/CEP"
            android:textColor="#69b2c3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_num" />

        <Button
            android:id="@+id/bt_reg_2"
            android:layout_width="293dp"
            android:layout_height="57dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="#69b2c3"
            android:text="@string/Cadastrar"
            app:cornerRadius="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_cep" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>